--- a/css/main.scss
+++ b/css/main.scss
@@ -32,10 +32,10 @@ header{
     background-color: #ffffff;
     button{
         background-color: #ffffff;
-        margin: 0;
+        margin: 5px;
         padding:10px 20px;
         border-radius: 70px;
-        font-size: 16px;
+        font-size: 14px;
         border:none;
         box-shadow: none;
     }
@@ -45,14 +45,14 @@ header{
     }
     .header-content{
         box-sizing: border-box;
-        padding: 15px;
+        padding: 6px 0px;
         width: 1220px;
         margin: 0 auto;
         display: flex;
         align-items: center;
         img{
-            width: 70px;
-            height: 70px;
+            width: 80px;
+            height: 80px;
             padding: 0;
         }
         .header-right{
@@ -73,19 +73,23 @@ header{
         padding-top: 30px;
 
         .request-left{
-            font-size: 20px;
             margin-right: auto;
             padding: 15px;
-            align-self: center;
+            align-self: end;
             text-align: center;
             width: 50%;
             p{
                 color: gray;
+                padding: 20px;
+                padding-top: 30px;
+                padding-bottom: 0px;
+                font-size: 18px;
             }
             h1 {
-                font-weight: 900;
-                font-size: 35px;
-                padding-bottom: 20px;
+                color: rgb(65, 65, 65);
+                margin-top: 30px;
+                font-weight: 600;
+                font-size: 34px;
             }
         }
 
@@ -94,11 +98,17 @@ header{
             width:50%;
         
             h2{
-                font-size: 30px;
-                font-weight: 900;
+                color: rgb(65, 65, 65);
+                font-size: 22px;
+                font-family: "Open Sans" , sans-serif;
+                font-weight: 600;
             }
             .user-input{
-                padding: 15px 0px;
+                padding: 10px 0px;
+                p{
+                    color: rgb(65, 65, 65);
+                    padding: 5px 0px;
+                }
                 p::after{
                     content: '*';
                     color: red;
@@ -124,24 +134,22 @@ header{
                 a:hover{
                     text-decoration: underline;
                 }
-            }
-
-            .reg-button {
-                margin-top: 20px;
-                text-align: center;
-                button{
-                    border: 0px;
-                    border-radius: 50px;
-                    width: 50%;
-                    background-color: #337ab7;
-                    color: #ffffff;
-                    padding: 10px;
-                }
-                button:hover{
-                        background-color: #0f5694;
-                    }
-            }             
+            }            
         }
+        .reg-button {
+            text-align: center;
+            button{
+                border: 0px;
+                border-radius: 50px;
+                width: 70%;
+                background-color: #337ab7;
+                color: #ffffff;
+                padding: 10px;
+            }
+            button:hover{
+                    background-color: #0f5694;
+                }
+        }         
     }
 }
 
@@ -267,21 +275,22 @@ header{
         
                 h2{
                     font-size: 22px;
-                    font-weight: 900;
+                    font-weight: 600;
                 }
 
-                .reg-button{
-                    margin-top: 20px;
-                    text-align: center;
-                button{
-                    border: 0px;
-                    border-radius: 50px;
-                    width: 100%;
-                    background-color: #337ab7;
-                    color: #ffffff;
-                    padding: 10px;
-                }
-                }
+ 
+            }
+            .reg-button{
+                margin-top: 20px;
+                text-align: center;
+            button{
+                border: 0px;
+                border-radius: 50px;
+                width: 100%;
+                background-color: #337ab7;
+                color: #ffffff;
+                padding: 10px;
+            }
             }
         }
     }
@@ -340,23 +349,48 @@ header{
       }
 }
 
-@media(max-width: 600){
+@media(max-width: 600px){
+    header{
+        .header-content{
+            padding-top: 8px;
+            img{
+                width: 60px;
+                height: 60px;
+            }
+        }
+    }
+
     #request{
         .request-conteiner{
             padding: 10px;
-
             .request-left{
-                padding: 10px;
+                padding: 0px;
+                width: 300px;
                 p{
+                    padding-top: 15px;
                     font-size: 14px;
                 }
                 h1{
+                    margin: 0px;
                     font-size: 20px;
                 }
             }
 
             .request-right{
-                padding: 10px;
+                padding: 0px;
+                h2{
+                    padding-top: 30px;
+                    font-weight: 600;
+                    font-size: 21px;
+
+                }
+
+                .user-input{
+                    padding: 0px;
+                }
+            }
+            .reg-button{
+                padding-bottom: 30px;
             }
         }
     }
