--- a/css/mentor.scss
+++ b/css/mentor.scss
@@ -12,8 +12,8 @@
         padding-top: 50px;
         h1{
             text-align: center;
-            font-weight: 900;
-            font-size: 40px;
+            font-weight: 500;
+            font-size: 35px;
         }
         margin-top: 30px;
 
@@ -25,12 +25,13 @@
         
             .mentor-dis{
                 p{
-                    margin: 20px 0px;
+                    margin: 10px 0px;
+                    font-weight: 300;
                 }
                 #mentor_name{
                     color: #3c93df;
                     font-family: 'PT Open Sans', sans-serif;
-                    font-weight: 500;
+                    font-weight: 600;
                     margin: 30px 0px;
                 }
             }
@@ -39,11 +40,11 @@
         .mentors-buttons{
             width: 100%;
             text-align: center;
-            padding-bottom: 50px;
+            padding-bottom: 25px;
             button{
-                margin: 5px;
-                width: 10px;
-                height: 10px;
+                margin: 7px;
+                width: 13px;
+                height: 13px;
                 background-color: rgb(155, 154, 154);
                 border-width: 0px;
                 border-radius: 50%;
@@ -93,7 +94,7 @@
                 font-size: 24px;
             }
             .mentors-list{
-                margin-top: 20px;
+                margin-top: 10px;
             }
             .mentors-elem{
                 img{
@@ -101,6 +102,10 @@
                     height: 150px;
                 }
                 .mentor-dis{
+                    #mentor_name{
+                        font-size: 16px;
+                        margin: 25px 0px;
+                    }
                     p{
                         font-size: 14px;
                     }
