--- a/css/style/qoute.css
+++ b/css/style/qoute.css
@@ -7,7 +7,7 @@
 #markCurse .qoute-conteiner {
   box-sizing: border-box;
   padding: 15px;
-  padding-top: 100px;
+  padding-top: 65px;
   width: 1220px;
   margin: 0 auto;
   text-align: center;
@@ -15,12 +15,14 @@
 }
 #markCurse .qoute-conteiner h1 {
   font-size: 35px;
+  font-weight: 500;
 }
 #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
-  margin: 50px 150px;
+  margin: 20px 150px;
   position: relative;
   display: flex;
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: 300;
 }
 #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text span {
   font-size: 40px;
@@ -32,16 +34,18 @@
 #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text #last {
   align-self: end;
 }
+#markCurse .qoute-conteiner .qoute-list h3 {
+  font-weight: 500;
+}
 #markCurse .qoute-buttons {
   width: 100%;
   text-align: center;
-  margin-bottom: 40px;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
 }
 #markCurse .qoute-buttons button {
-  margin: 5px;
-  width: 10px;
-  height: 10px;
+  margin: 7px;
+  width: 13px;
+  height: 13px;
   background-color: rgb(155, 154, 154);
   border-width: 0px;
   border-radius: 50%;
@@ -53,7 +57,7 @@
 @media (max-width: 1220px) {
   #markCurse .qoute-conteiner {
     width: 950px;
-    height: 350px;
+    height: 450px;
     padding-top: 30px;
   }
   #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
@@ -74,15 +78,16 @@
 }
 @media (max-width: 640px) {
   #markCurse .qoute-conteiner {
-    width: 280px;
+    width: 300px;
     padding: 10px;
     padding-top: 20px;
+    height: 500px;
   }
   #markCurse .qoute-conteiner h1 {
     font-size: 22px;
   }
   #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
-    font-size: 12px;
+    font-size: 14px;
     margin: 10px auto;
   }
   #markCurse .qoute-buttons {
