--- a/css/down.scss
+++ b/css/down.scss
@@ -8,7 +8,7 @@
         .contacts-list{
             box-sizing: border-box;
             display: flex;
-            padding: 15px;
+            padding: 20px 15px;
             margin: 0px auto;
             width: 1220px;
 
@@ -17,14 +17,16 @@
                 text-align: center;
                 color: #ffffff;
                 h2{
-                    font-size: 20px;
+                    font-size: 18px;
                 }
                 p{
-                    color:#ffffff
+                    color:#ffffff;
+                    font-weight: 300;
+                    font-size: 14px;
                 }
                 img{
-                    height: 50px;
-                    width: 50px;
+                    height: 60px;
+                    width: 60px;
                     
                 }
             }
@@ -33,11 +35,13 @@
 }
 
 footer{
+    background-color: #f7f7f7;
     text-align: center;
     width: 100%;
     padding: 50px 0px;
     p{
         color: #3c93df;
+        font-size: 14px;
     }
     a{
         color:grey;
@@ -51,7 +55,7 @@ footer{
 @media(max-width: 1220px) {
     #contacts{
         .contacts-container{
-            padding: 0px;
+            padding: 15px;
 
             .contacts-list{
                 font-size: 14px;
@@ -65,7 +69,7 @@ footer{
 @media(max-width: 620px) {
     #contacts{
         .contacts-container{
-            padding: 0px;
+            padding: 15px;
 
             .contacts-list{
                 justify-content: space-between;
@@ -77,10 +81,19 @@ footer{
                     font-size: 16px;
                 }
                 .elem-contacts{
+                    padding: 10px 0px;
                     width: 135px;
                     font-size: 12px;
                     img{
                         margin: 5px;
+                        width: 40px;
+                        height: 40px;
+                    }
+                    h2{
+                        font-size: 16px;
+                    }
+                    p{
+                        font-size: 12px;
                     }
                 }
             }
