--- a/css/style/video.css
+++ b/css/style/video.css
@@ -8,14 +8,14 @@
   box-sizing: border-box;
   width: 1220px;
   margin: 0 auto;
-  padding: 15px;
+  padding: 30px 15px;
 }
 #video .video-content .title-dis {
   text-align: center;
 }
 #video .video-content .title-dis h1 {
-  font-weight: 900;
-  font-size: 40px;
+  font-weight: 500;
+  font-size: 35px;
   padding-top: 20px;
 }
 #video .video-content .title-dis p {
@@ -89,6 +89,16 @@
   }
 }
 @media (max-width: 350px) {
+  #video .video-content .title-dis {
+    width: 300px;
+  }
+  #video .video-content .title-dis h1 {
+    padding-top: 70px;
+    font-size: 26px;
+  }
+  #video .videoUrl {
+    padding-bottom: 30px;
+  }
   #video .videoUrl iframe {
     width: 100%;
     height: 100px;
