--- a/css/video.scss
+++ b/css/video.scss
@@ -7,14 +7,14 @@
         box-sizing: border-box;
         width: 1220px;
         margin: 0 auto;
-        padding: 15px;
+        padding: 30px 15px;
 
         .title-dis {
             text-align: center;
 
             h1 {
-                font-weight: 900;
-                font-size: 40px;
+                font-weight: 500;
+                font-size: 35px;
                 padding-top: 20px;
             }
 
@@ -126,11 +126,21 @@
 
 @media (max-width: 350px){
     #video{
+        .video-content{
+            .title-dis{
+                width: 300px;
+                h1{
+                    padding-top: 70px;
+                    font-size: 26px;
+                }
+            }
+        }
         .videoUrl {
             iframe {
                 width: 100%;
                 height: 100px;
             }
+            padding-bottom: 30px;
         }
     }
 }
