--- a/css/mentor.scss
+++ b/css/mentor.scss
@@ -13,7 +13,7 @@
         h1{
             text-align: center;
             font-weight: 500;
-            font-size: 35px;
+            font-size: 32px;
         }
         margin-top: 30px;
 
@@ -25,14 +25,20 @@
         
             .mentor-dis{
                 p{
-                    margin: 10px 0px;
                     font-weight: 300;
+                    padding-top: 10px;
+                }
+                hr{
+                    background-color: #d4d4d4;
+                    border: 1px solid #f7f7f7;
+                    margin: 10px 0px;
                 }
                 #mentor_name{
+                    font-size: 18px;
                     color: #3c93df;
                     font-family: 'PT Open Sans', sans-serif;
                     font-weight: 600;
-                    margin: 30px 0px;
+                    margin: 20px 0px;
                 }
             }
         }
