--- a/css/style/mentor.css
+++ b/css/style/mentor.css
@@ -15,7 +15,7 @@
 #mentor .mentors-conteiner h1 {
   text-align: center;
   font-weight: 500;
-  font-size: 35px;
+  font-size: 32px;
 }
 #mentor .mentors-conteiner .mentors-elem {
   display: flex;
@@ -24,14 +24,20 @@
   margin: 10px 100px auto 75px;
 }
 #mentor .mentors-conteiner .mentors-elem .mentor-dis p {
-  margin: 10px 0px;
   font-weight: 300;
+  padding-top: 10px;
+}
+#mentor .mentors-conteiner .mentors-elem .mentor-dis hr {
+  background-color: #d4d4d4;
+  border: 1px solid #f7f7f7;
+  margin: 10px 0px;
 }
 #mentor .mentors-conteiner .mentors-elem .mentor-dis #mentor_name {
+  font-size: 18px;
   color: #3c93df;
   font-family: "PT Open Sans", sans-serif;
   font-weight: 600;
-  margin: 30px 0px;
+  margin: 20px 0px;
 }
 #mentor .mentors-conteiner .mentors-buttons {
   width: 100%;
