--- a/scss/course.scss
+++ b/scss/course.scss
@@ -1,5 +1,5 @@
-$font-family: 'Open Sans', sans-serif;
-$contentwidth: 1220px;
+@import 'variable';
+
 
 #course{
     background-color: #ffffff;
@@ -33,7 +33,7 @@ $contentwidth: 1220px;
                     margin-bottom: 10px;
                 }
                 p{
-                    font-size: 14px;
+                    font-size: $font-sizeP;
                 }
                 hr{
                     border-color: #50a5f0;
@@ -62,6 +62,9 @@ $contentwidth: 1220px;
             border-radius: 50%;
     
             &:hover{
+                background-color: rgb(82, 82, 82);
+            }
+            &.active {
                 background-color: rgb(82, 82, 82);
             }
         }
@@ -93,11 +96,10 @@ $contentwidth: 1220px;
                 p{
                     font-size: 15px;
                     font-weight: 300;
-                };
+                }
 
                 img{
-                    height: 60px;
-                    width: fit-content;
+                    width: min-content;
                     margin: 15px;
                 }
             }
