--- a/scss/mentor.scss
+++ b/scss/mentor.scss
@@ -1,3 +1,5 @@
+@import 'variable';
+
 #mentor{
     background-color: #ffffff;
 
@@ -58,6 +60,9 @@
                 &:hover{
                     background-color: rgb(82, 82, 82);
                 }
+                &.active {
+                    background-color: rgb(82, 82, 82);
+                }
             }
         }
         
@@ -109,11 +114,11 @@
                 }
                 .mentor-dis{
                     #mentor_name{
-                        font-size: 16px;
+                        font-size: $font-sizeS;
                         margin: 25px 0px;
                     }
                     p{
-                        font-size: 14px;
+                        font-size: $font-sizeP;
                     }
                 }
             }
