--- a/scss/video.scss
+++ b/scss/video.scss
@@ -1,3 +1,5 @@
+@import 'variable';
+
 #video {
     background-color: #f7f7f7;
     p{
@@ -69,7 +71,7 @@
                 }
     
                 p {
-                    font-size: 16px;
+                    font-size: $font-sizeS;
                 }
             }
         }
@@ -87,11 +89,12 @@
                 }
     
                 p {
-                    font-size: 16px;
+                    font-size: $font-sizeS;
                 }
             }
     
             .videoUrl {
+                padding: 0 10px;
                 iframe {
                     width: 100%;
                     height: 300px;
@@ -103,6 +106,7 @@
 
 @media (max-width: 500px) {
     #video{
+        .video-content {
         .videoUrl {
             iframe {
                 width: 100%;
@@ -122,6 +126,7 @@
             }
         }
     }
+    }
 }
 
 @media (max-width: 350px){
@@ -134,13 +139,6 @@
                     font-size: 26px;
                 }
             }
-        }
-        .videoUrl {
-            iframe {
-                width: 100%;
-                height: 100px;
-            }
-            padding-bottom: 30px;
         }
     }
 }
